# deworld

./: .gitignore  INSTALL  LICENCE  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.py
.github/workflows/: run_tests.yml
deworld/: __init__.py  cartographer.py  exceptions.py  generate.py  map_colors.py  normalizers.py  power_points.py  specifixation.txt  utils.py  world.py
deworld/configs/: __init__.py  base_config.py
deworld/layers/: __init__.py  atmosphere_layer.py  base_layer.py  height_layer.py  soil_layer.py  temperature_layer.py  vegetation_layer.py  wetness_layer.py  wind_layer.py
deworld/power_points/: __init__.py  arrow_area_point.py  base_point.py  circle_area_point.py
deworld/tests/: __init__.py  utils_tests.py  vegetation_layer_tests.py  wind_layer_tests.py  world_tests.py
